tests/baselines/reference/throwWithoutNewLine1.errors.txt
throwWithoutNewLine1.ts(1,6): error TS1109: Expression expected.


==== throwWithoutNewLine1.ts (1 errors) ====
    throw
         
!!! error TS1109: Expression expected.